Bug 371976 - Kate project-plugin crashes while selecting "Lookup:.." from the context menu without an open project.
Summary: Kate project-plugin crashes while selecting "Lookup:.." from the context menu...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 16.08
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 366221 372306 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-02 14:13 UTC by Looserof7
Modified: 2017-12-20 21:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments
Generated Report (7.08 KB, text/plain)
2016-11-02 14:13 UTC, Looserof7
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Looserof7 2016-11-02 14:13:01 UTC
Created attachment 101962 [details]
Generated Report

Kate Version : 16.08.02

Reproducing Bug:
Select any word with your mouse or keyboard, now right-click on our mouse button or press options key from your keyboard.
Hover your mouse towards project option from drop-down menu, and then select lookup option for that particular word from the sub-menu.
now kate crashes.

what all other applications were opened while I was doing this, File Manager. and transmission.

Which operating System I was using, Manjaro.

Was Bug reproducible? yes.

I have a file, which is generated by, that application which pop's-up when anny other application crashes.
Comment 1 Kåre Särs 2016-11-02 14:24:38 UTC
I can confirm this.

It happens when you have the project plugin enabled, but you do not have a project open -> no "Current Project" toolview.

I have not checked the code but I suspect the missing toolview is the problem.
Comment 2 Looserof7 2016-11-02 14:52:04 UTC
(In reply to Kåre Särs from comment #1)
> I can confirm this.
> 
> It happens when you have the project plugin enabled, but you do not have a
> project open -> no "Current Project" toolview.
> 
> I have not checked the code but I suspect the missing toolview is the
> problem.

Maybe it would be better, if that isn't checked in by default.

or an update would be better.
Comment 3 Kåre Särs 2016-11-11 19:59:28 UTC
*** Bug 372306 has been marked as a duplicate of this bug. ***
Comment 4 Kåre Särs 2016-11-11 20:01:58 UTC
Git commit 8666aaab8eac67a2e377d80275e1c6a2860b5a6f by Kåre Särs.
Committed on 11/11/2016 at 19:54.
Pushed by sars into branch 'master'.

Do not crash when looking-up a word without the project tool-view

M  +3    -0    addons/project/kateprojectpluginview.cpp

http://commits.kde.org/kate/8666aaab8eac67a2e377d80275e1c6a2860b5a6f
Comment 5 Christoph Cullmann 2017-12-20 21:11:13 UTC
*** Bug 366221 has been marked as a duplicate of this bug. ***