Do not crash when looking-up a word without the project tool-view

BUG: 371976